--- a/styles/style.css
+++ b/styles/style.css
@@ -17,6 +17,7 @@
   align-items: center;
   padding: 30px;
   font-family: "Poppins", sans-serif;
+  border-bottom: 1px solid #c4c4c4;
 }
 
 .brand {
@@ -154,509 +155,811 @@
 }
 
 .orange {
-  background-color: #FFE5DA
+  background-color: #ffe5da;
 }
 
-.bg_green{
-    background-color: #08d3bb;
+.bg_green {
+  background-color: #08d3bb;
 }
 
-.bg_purple{
-    background-color: #9208D3;
+.bg_purple {
+  background-color: #9208d3;
 }
 
-
-.bg_blue{
-    background-color: #1090cb;
+.bg_blue {
+  background-color: #1090cb;
 }
 
-
-.circle{
-    border-radius: 50%!important;
+.circle {
+  border-radius: 50% !important;
 }
 
-.icon{
-    padding: 25px;
-    border-radius: 20px;
+.icon {
+  padding: 25px;
+  border-radius: 20px;
 }
 
 .top_cards {
-    gap: 10px;
-    padding: 30px 50px;
-    border: none;
-    border-bottom: 1px solid #C7C7C7;
-    justify-content: space-between;
+  gap: 10px;
+  padding: 30px 50px;
+  border: none;
+  border-bottom: 1px solid #c7c7c7;
+  justify-content: space-between;
 }
 
-
-
-
-.svg{
-    width: 33px;
-    height: 33px;
+.svg {
+  width: 33px;
+  height: 33px;
 }
 
-
-.card_title{
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 35px;
+.card_title {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 35px;
 }
 
-
-.card_text{
-    font-weight: 400;
-    font-size: 15px;
-    line-height: 26px;
-    color: #969696;
+.card_text {
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 26px;
+  color: #969696;
 }
 
-
-.text_container{
-    padding: 110px 20px 80px 20px;
-    text-align: center;
-    gap: 32px;
+.text_container {
+  padding: 110px 20px 80px 20px;
+  text-align: center;
+  gap: 32px;
 }
 
-.text_container_title{
-    font-weight: 600;
-    font-size: 33px;
-    line-height: 53px;
+.text_container_title {
+  font-weight: 600;
+  font-size: 33px;
+  line-height: 53px;
 }
 
-.text_container_text{
-    font-weight: 400;
-    font-size: 18px;
-    line-height: 31px;
-    color: #868686;
+.text_container_text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 31px;
+  color: #868686;
 }
 
-
-.container{
-    padding: 20px 60px;
-    position: relative;
+.container {
+  padding: 20px 60px;
+  position: relative;
 }
 
-.left_middle{
-    width: 40%;
+.left_middle {
+  width: 40%;
 }
 
-.right_middle{
-    width: 60%;
+.right_middle {
+  width: 60%;
 }
 
-
-.middle_title{
-    font-weight: 600;
-    font-size: 30px;
-    line-height: 51px;
-    color: black
+.middle_title {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 51px;
+  color: black;
 }
 
-.middle_title span{
-    color: #1090cb;
+.middle_title span {
+  color: #1090cb;
 }
 
-.middle_text{
-    font-weight:400;
-    font-size: 16px;
-    line-height: 27px;
-    
+.middle_text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 27px;
 }
 
-
-
-.img_circle{
-    position:absolute;
-    right: 0px;
-    
+.img_circle {
+  position: absolute;
+  right: 0px;
 }
 
-
-.index_minus1{
-    z-index: -1;
+.index_minus1 {
+  z-index: -1;
 }
 
-.index_1{
-    z-index: 1;
+.index_1 {
+  z-index: 1;
 }
 
-
-.content_cards{
-    gap: 50px;
+.content_cards {
+  gap: 50px;
 }
-.content_card_left{
-    width: 50%;
-    padding: 48px;
-    color: black;
-    background-color: #F4F4F4;
-    border-radius: 20px;
-}
-
-.content_card_right{
-    width: 50%;
-    padding: 48px;
-    color: white;
-    background-color: #1090cb;
-    border-radius: 20px;
-    
+.content_card_left {
+  width: 50%;
+  padding: 48px;
+  color: black;
+  background-color: #f4f4f4;
+  border-radius: 20px;
 }
 
-.content_title{
-    font-weight:600;
-    font-size: 25px;
-    line-height: 42px;
-    text-align: center;
+.content_card_right {
+  width: 50%;
+  padding: 48px;
+  color: white;
+  background-color: #1090cb;
+  border-radius: 20px;
 }
 
-.content_text{
-    font-weight:400;
-    font-size: 16px;
-    line-height: 27px;
-    text-align: center;
+.content_title {
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 42px;
+  text-align: center;
 }
 
-.content_btn{
-    margin-left: auto;
-    margin-right: auto;
-    padding: 15px 30px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
+.content_text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 27px;
+  text-align: center;
 }
 
-.content_btn_left{
-    font-weight:500;
-    font-size: 16px;
-    line-height: 27px;
-    background-color: #1090cb;
-    color: #fff;
+.content_btn {
+  margin-left: auto;
+  margin-right: auto;
+  padding: 15px 30px;
+  border: none;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
-.content_btn_right{
-    font-weight:500;
-    font-size: 16px;
-    line-height: 27px;
-    color: #1090cb;
-    background-color: #fff;
-    position: relative;
+.content_btn_left {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 27px;
+  background-color: #1090cb;
+  color: #fff;
 }
 
-
-.bell_icon{
-    position: absolute;
-    right: 70px;
-    top: -60px;
+.content_btn_right {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 27px;
+  color: #1090cb;
+  background-color: #fff;
+  position: relative;
 }
 
-
+.bell_icon {
+  position: absolute;
+  right: 70px;
+  top: -60px;
+}
 
 /* sponsor container */
 
-
-.container_sponsor{
-    margin-top: 100px;
-    position: relative;
+.container_sponsor {
+  margin-top: 100px;
+  position: relative;
 }
 
-.sponsor_title{
-    text-align: center;
-    font-weight:500;
-    font-size: 24px;
-    line-height: 38px;
+.sponsor_title {
+  text-align: center;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 38px;
 }
 
-.circle_sponsor{
-position: absolute;
-top: -50px;
-left: 0px;
-z-index: -1;
+.circle_sponsor {
+  position: absolute;
+  top: -50px;
+  left: 0px;
+  z-index: -1;
 }
 
-
-.subscribe_container{
-    padding: 120px 40px;
-    background-color: #E8F4FA;
-    position: relative;
-    
+.subscribe_container {
+  padding: 120px 40px;
+  background-color: #e8f4fa;
+  position: relative;
 }
 
-.subscribe_title{
-    text-align: center;
-    font-weight:600;
-    font-size: 30px;
-    line-height: 51px;
+.subscribe_title {
+  text-align: center;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 51px;
 }
 
-.subscribe_input_container{
-    margin-top: 50px;
-    width: 70%;
+.subscribe_input_container {
+  margin-top: 50px;
+  width: 70%;
 }
 
-.subscribe_input{
-    padding: 20px 36px;
-    font-weight:400;
-    font-size: 16px;
-    line-height: 27px;
-    border-radius: 10px;
-    border: none;
-    outline: none;
-    flex-grow: 3;
+.subscribe_input {
+  padding: 20px 36px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 27px;
+  border-radius: 10px;
+  border: none;
+  outline: none;
+  flex-grow: 3;
 }
 
-.subscribe_btn{
-    flex-grow: 1;
-    padding: 20px 40px;
+.subscribe_btn {
+  flex-grow: 1;
+  padding: 20px 40px;
 
-    font-weight:500;
-    font-size: 16px;
-    line-height: 27px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 27px;
 
-    border: none;
-    border-radius: 10px;
-    text-transform: uppercase;
-    background-color: black;
-    color: #fff;
-
+  border: none;
+  border-radius: 10px;
+  text-transform: uppercase;
+  background-color: black;
+  color: #fff;
 }
 
-
-.content_circle{
-    position: absolute;
-    right: 0px;
-    z-index: -1;
+.content_circle {
+  position: absolute;
+  right: 0px;
+  z-index: -1;
 }
 
-.star_img{
-    position: absolute;
-    top: -50px;
-    left: 10%;
+.star_img {
+  position: absolute;
+  top: -50px;
+  left: 10%;
 }
 
-.fortuna_img{
-    position: absolute;
-    top: 10%;
-    right: 20%;
+.fortuna_img {
+  position: absolute;
+  top: 10%;
+  right: 20%;
 }
-
 
 /* footer */
 
-.footer{
-    padding-top: 90px;
-    padding-bottom: 90px;
-    align-content: stretch;
-    border-bottom: 1px ;
-    border-color: rgba(210, 210, 210, 1);
+.footer {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  align-content: stretch;
+  border-bottom: 1px;
+  border-color: rgba(210, 210, 210, 1);
 }
 
-
-.footer_first{
+.footer_first {
   width: 30%;
 }
 
-
-.footer_second{
+.footer_second {
   width: 20%;
 }
 
-
-.footer_brand{
-    font-weight:700;
-    font-size: 16px;
-    line-height: 24px;
-    color: #00329B;
+.footer_brand {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 24px;
+  color: #00329b;
 }
 
-.footer_title{
-    font-weight:500;
-    font-size: 17px;
-    line-height: 25px;
+.footer_title {
+  font-weight: 500;
+  font-size: 17px;
+  line-height: 25px;
 }
 
-.footer_links a{
-    margin-top: 5px;
-    color: black;
+.footer_links a {
+  margin-top: 5px;
+  color: black;
 }
 
-
-.socail_media_links{
-  color: black!important;
+.socail_media_links {
+  color: black !important;
   width: 100%;
   justify-content: space-between;
 }
 
-
 .socail_media_links a {
- padding: 15px;
-  
-  box-shadow:  0px 4px 14px rgba(0, 0, 0, 0.15) ;
-  border-radius: 50%;
-  
-}
+  padding: 15px;
 
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.15);
+  border-radius: 50%;
+}
 
 .socail_media_links img {
   width: 15px;
   height: 15px;
-   
-   
- }
+}
 
- .copyright{
+.copyright {
   padding: 30px 50px;
   text-align: center;
+}
 
- }
-
- .copyright_text{
+.copyright_text {
   color: #686868;
-  font-family: "Poppins",sans-serif;
- }
+  font-family: "Poppins", sans-serif;
+}
+
+/* about us page  */
+.hero_about {
+  padding: 10% 5%;
+  gap: 5%;
+  font-family: "Poppins", sans-serif;
+}
+
+.hero_about_left {
+  gap: 50px;
+  width: 45%;
+}
+
+.hero_about_right {
+  width: 55%;
+  position: relative;
+}
+
+.hero_background_img {
+  position: absolute;
+  right: 0px;
+  bottom: -50px;
+  z-index: -1;
+}
+
+.hero_left_inner_first {
+  align-items: flex-end;
+  gap: 5%;
+}
+
+.hero_left_inner_first img {
+  width: 100%;
+}
+
+.hero_left_inner_second {
+  justify-content: flex-end;
+}
+
+.about_info {
+  padding: 10% 5%;
+}
+
+.about_title {
+  font-weight: 400;
+  font-size: 25px;
+  line-height: 37px;
+  color: #1090cb;
+}
+
+.about_header {
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 68px;
+}
+
+.about_text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 31px;
+}
+
+.about_info_title {
+  color: #1090cb;
+  font-weight: 600;
+  font-size: 45px;
+  line-height: 72px;
+}
+
+.about_info_text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.mid_title {
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 48px;
+}
+
+.mid_text {
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 40px;
+}
+
+.mid_btn {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  padding: 10px 50px;
+  border: 1px solid #1090cb;
+  border-radius: 10px;
+  color: #1090cb;
+  background-color: #fff;
+  cursor: pointer;
+}
+
+.mid_card_container {
+  background-color: #fff;
+  box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.17);
+  padding: 50px;
+}
+
+.mid_card_container {
+  display: flex;
+  flex-direction: row;
+  gap: 16px;
+  flex-wrap: wrap;
+  align-content: space-between;
+}
+
+.mid_card_content {
+  display: flex;
+}
+
+.mid_card_title {
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 44px;
+}
+
+.about_middle {
+  padding: 100px 0px;
+  gap: 50px;
+}
+
+.about_mid_left {
+  width: 45%;
+  padding-left: 50px;
+  align-items: flex-start;
+}
+
+.about_mid_left::before {
+  content: "";
+  width: 50px;
+  height: 5px;
+  background-color: #4628a4;
+}
+
+.about_mid_right {
+  width: 55%;
+}
+
+.mid_icon_img {
+  min-width: 85px;
+  height: 85px;
+}
+
+/* servcies */
+
+.hero_services_top {
+  width: 50%;
+  text-align: center;
+}
+
+.service_hero_top_img {
+  padding: 20px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+.hero_services {
+  background: rgba(16, 144, 203, 0.1);
+  padding: 2% 5%;
+  height: 70vh;
+}
+
+.service_hero_title {
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+.service_hero_title span {
+  color: #1090cb;
+  font-weight: 600;
+  font-size: 40px;
+  line-height: 60px;
+}
+
+section {
+  font-family: "Poppins", sans-serif;
+}
+
+.service_hero_text {
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 31px;
+}
+
+.mid_card_services {
+  width: 45%;
+}
+
+.hero_services_bottom {
+  position: relative;
+  margin-top: 2%;
+  
+  width: 100%;
+}
+
+.mid_card_container_services {
+  gap: 50px;
+  position: absolute;
+  width: 100%;
+}
 
 
- @media (max-width: 1200px) {
-  .top_cards{
+.services_mid_container{
+  margin-top: 15%;
+  padding: 2% 5%;
+  
+}
+
+.service_mid_left{
+ align-items: flex-start ;
+ width: 50%;
+}
+
+
+.service_mid_left_title{
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 51px;
+}
+
+
+.service_mid_left_title span{
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 51px;
+  color: #1090cb;
+}
+
+
+.service_mid_left_text{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+
+.service_mid_btn{
+  padding: 10px 50px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 32px;
+  border:  1px solid #1090cb;
+  color: #1090cb;
+  background-color: #fff;
+  border-radius: 10px;
+  cursor: pointer;
+}
+
+
+.service_stats{
+  padding: 10% 5%;
+  background-color: #1090cb;
+  position: relative;
+  margin: 10% 0px;
+}
+
+.service_stats_card{
+  text-align: center;
+  color: #fff;
+}
+
+
+.stats_number{
+  font-weight: 600;
+  font-size: 65px;
+  line-height: 115px;
+}
+
+.stats_text{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 28px;
+}
+
+
+.stat_background{
+  position: absolute;
+}
+
+
+.background_1{
+  top: -100px;
+  left: 50px;
+}
+
+
+.background_2{
+  bottom: -10px;
+  left: 0px;
+}
+
+.background_3{
+  right: 7%;
+  top: -70px;
+
+}
+
+.background_bell{
+  right: 50px;
+  top: -70px;
+}
+
+
+.background_cactus{
+  bottom: -50px;
+  left: 20%;
+}
+
+.services_projects_container{
+  padding: 5% 5%;
+}
+
+.project_header_text{
+  font-weight: 500;
+  font-size: 36px;
+  line-height: 64px;
+}
+
+.projects_card_title{
+  font-weight: 600;
+  font-size: 23px;
+  line-height: 40px;
+}
+
+.projects_card_text{
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 33px;
+}
+
+
+
+@media (max-width: 1200px) {
+  .top_cards {
     flex-wrap: wrap;
   }
 
-  .cards{
+  .cards {
     width: 45%;
   }
 
- .left_middle {
-  width: 50%;
-  
- }
+  .left_middle {
+    width: 50%;
+  }
 
- .right_middle{
-  width: 50%;
- }
+  .right_middle {
+    width: 50%;
+  }
 
+  .content_cards {
+    flex-direction: column;
+  }
 
- .content_cards{
-  flex-direction: column;
- }
+  .content_card_left,
+  .content_card_right {
+    width: 100%;
+    position: relative;
+  }
 
- .content_card_left, .content_card_right{
-  width: 100%;
-  position: relative;
- }
+  .bell_icon {
+    right: 5%;
+    top: -80px;
+  }
 
- .bell_icon{
-  right:5%;
-  top:-80px
- }
+  .sponsors {
+    flex-direction: row;
+    flex-wrap: wrap;
+  }
 
-
- .sponsors {
-  flex-direction: row;
-  flex-wrap: wrap;
- }
-
-
- .sponsors img {
-  width: 45%;
- }
+  .sponsors img {
+    width: 45%;
+  }
 }
-
 
 @media (max-width: 1000px) {
-.links{
-  display: none;
-}
+  .links {
+    display: none;
+  }
 
-  .hero_container{
+  .hero_container {
     flex-direction: column-reverse;
     padding: 10px 20px;
   }
 
-  .hero_btns{
+  .hero_btns {
     flex-direction: column;
   }
 
-  .top_cards{
+  .top_cards {
     padding: 10px 20px;
     flex-direction: column;
   }
 
-  .cards{
+  .cards {
     width: 100%;
   }
 
-  .margin_top_100{
+  .card_title {
+    text-align: center;
+  }
+
+  .card_text {
+    text-align: center;
+  }
+
+  .margin_top_100 {
     margin-top: 20px;
   }
 
-  .icon_mobile{
+  .icon_mobile {
     display: block;
     margin-left: auto;
     margin-right: auto;
   }
 
-
-  .middle_content{
+  .middle_content {
     flex-direction: column;
   }
 
-  .hero_left{
+  .hero_left {
     width: 100%;
   }
 
-  .hero_right{
+  .hero_right {
     width: 100%;
   }
-  .container{
+  .container {
     flex-direction: column;
+    padding: 10px 20px;
   }
 
+  .middle_title {
+    text-align: center;
+  }
 
-  .content_cards{
+  .content_cards {
     padding: 10px 20px;
   }
   .left_middle {
     width: 100%;
-    
-   }
-  
-   .right_middle{
+  }
+
+  .right_middle {
     width: 100%;
-   }
+  }
 
-
-   .container img{
+  .container img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-   }
+  }
 
-   .subscribe_container{
+  .subscribe_container {
     padding: 10px 20px;
-   }
+  }
 
-   .subscribe_input_container {
+  .subscribe_input_container {
     flex-direction: column;
-   }
+  }
 
-   .subscribe_input{
+  .subscribe_input {
     width: 100%;
-   }
+  }
 
-
-   .subscribe_btn{
+  .subscribe_btn {
     width: 100%;
-   }
+  }
 
-
-   .footer{
+  .footer {
     flex-direction: column;
     padding: 10px 20px;
-   }
+  }
 
-   .footer_container {
+  .footer_container {
     width: 100%;
-   }
+  }
 }
- 
-
-
